salt/downloads/bugs/fixes/bug_issue_descriptions/salt-7698
``` bash
root@salt-master01:~# salt-call --versions-report
           Salt: 0.17.0
         Python: 2.7.3 (default, Jan  2 2013, 13:56:14)
         Jinja2: 2.6
       M2Crypto: 0.21.1
 msgpack-python: 0.1.10
   msgpack-pure: Not Installed
       pycrypto: 2.6
         PyYAML: 3.10
          PyZMQ: 13.1.0
            ZMQ: 3.2.3

[root@slinuxmgmt01 ~]# salt-call --versions-report
           Salt: 0.16.3
         Python: 2.6.8 (unknown, Nov  7 2012, 14:47:45)
         Jinja2: unknown
       M2Crypto: 0.21.1
 msgpack-python: 0.1.12
   msgpack-pure: Not Installed
       pycrypto: 2.3
         PyYAML: 3.08
          PyZMQ: 2.1.9
            ZMQ: 2.2.0


root@salt-master01:/etc/salt# salt 'slinuxmgmt01.intranet.example.org' state.sls sshd common
slinuxmgmt01.intranet.example.org:
----------
    State: - file
    Name:      /etc/ssh/sshd_config
    Function:  managed
        Result:    True
        Comment:   File /etc/ssh/sshd_config updated
        Changes:   diff: ---  
+++  
@@ -1,3 +1,4 @@
+# !!! THIS FILE IS MANAGED BY SALT. DO NOT EDIT MANUALLY !!! 

 # Ecoute IPv4 seulement 
 Port 22

                   mode: 400

----------
    State: - service
    Name:      sshd
    Function:  running
        Result:    True
        Comment:   Service restarted
        Changes:   sshd: True


Summary
------------
Succeeded: 2
Failed:    0
------------
Total:     2



root@salt-master01:/etc/salt# salt-ssh 'slinuxmgmt01.intranet.example.org' state.sls sshd common
Process Process-1:
Traceback (most recent call last):
  File "/usr/lib/python2.7/multiprocessing/process.py", line 258, in _bootstrap
    self.run()
  File "/usr/lib/python2.7/multiprocessing/process.py", line 114, in run
    self._target(*self._args, **self._kwargs)
  File "/usr/lib/python2.7/dist-packages/salt/client/ssh/__init__.py", line 223, in handle_routine
    stdout, stderr = single.run()
  File "/usr/lib/python2.7/dist-packages/salt/client/ssh/__init__.py", line 446, in run
    self.wfuncs = salt.loader.ssh_wrapper(opts, wrapper)
  File "/usr/lib/python2.7/dist-packages/salt/loader.py", line 239, in ssh_wrapper
    'ssh'))
  File "/usr/lib/python2.7/dist-packages/salt/loader.py", line 45, in _create_loader
    ext_types = os.path.join(opts['extension_modules'], ext_type)
KeyError: 'extension_modules'
^C
Exiting gracefully on Ctrl-c
```

Even a simple test.ping won't work.

``` bash
# salt-ssh 'slinuxmgmt*' test.ping
slinuxmgmt01.intranet.example.org:
    Pseudo-terminal will not be allocated because stdin is not a terminal.

    Traceback (most recent call last):
      File "/tmp/.salt/salt-call", line 7, in ?
        from salt.scripts import salt_call
      File "/tmp/.salt/salt/__init__.py", line 34
        except ImportError as exc:
                            ^
    SyntaxError: invalid syntax
```
